git-svn-id: https://subversion.assembla.com/svn/cmosher@9781 884d43a4-ffbe-47e9-90ca-fd8c37d7eb32